# me-media-dev-dashboard

./: .gitignore  App.tsx  GEMINI.md  README.md  index.html  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  types.ts
apps/mcp-agent/: .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  package.json  pyproject.toml  requirements.txt  run_local.py  scheduled_runner.py
apps/mcp-agent/agent/: __init__.py  agent_loop.py
apps/mcp-agent/config/: __init__.py
apps/mcp-agent/core/: __init__.py  ai_client.py  base_scraper.py  browser.py  claude_client.py  database.py  notifier.py  orchestrator.py  scenario_loader.py  scraper_executor.py  scraper_generator.py  scraper_healer.py
apps/mcp-agent/docs/: IMPLEMENTATION_STATUS.md  NEW_SCRAPING_SYSTEM.md  ORGANIZATION_COMPLETE.md  QUICKSTART.md  README.md  SETUP.md  TEST_RESULT_REPORT.md  database-design.md  json-scenario-design.md
apps/mcp-agent/runners/: README.md  run_all_scrapers.py  run_local.py  run_scraper.py  scheduled_runner.py
apps/mcp-agent/scenarios/: a8app.yaml  a8net-daily-scenario.md  a8net.yaml  afb.yaml  affitown.yaml  circuitx.yaml  felmat.yaml  linkag.yaml  moshimo.yaml  webridge.yaml
apps/mcp-agent/scripts/: README.md  apply_migrations.py  create_execution_logs.py  fetch_affitown_daily.py  insert_affitown_data.py  remove_prompt_column.sql  seed_a8net.py  seed_afb.py  seed_affitown.py  test_a8app.py  test_a8net.py  test_accesstrade.py  test_afb.py  test_amazon.py  test_api.py  test_castalk.py  test_circuitx.py  test_dmm.py  test_felmat.py  (+12 more)
(+649 files in other folders)
